crates/toml_edit/tests/snapshots/invalid/integer/double-sign-plus.stderr
TOML parse error at line 1, column 21
  |
1 | double-sign-plus = ++99
  |                     ^
redundant numeric sign, expected nothing
